syntax = "proto3";

package transaction;

import "google/protobuf/empty.proto";

service TransactionController {
    rpc List(TransactionListRequest) returns (stream Transaction) {}
    rpc Create(Transaction) returns (Transaction) {}
    rpc Retrieve(TransactionRetrieveRequest) returns (Transaction) {}
    rpc RetrieveByAccount(TransactionRetrieveByAccountRequest) returns (stream Transaction) {}
    rpc Update(Transaction) returns (Transaction) {}
    rpc Destroy(Transaction) returns (google.protobuf.Empty) {}
    rpc DestroyAll(google.protobuf.Empty) returns (google.protobuf.Empty) {}

}

message Transaction {
    int32 transaction_id = 1;
    float amount = 2;
    string currency = 3;
    string dc_ind = 4;
    string description = 5;
    string date = 6;
    string account = 7;
}

message TransactionListRequest {
}

message TransactionRetrieveRequest {
    int32 transaction_id = 1;
}

message TransactionRetrieveByAccountRequest{
    string account = 1;
}